compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__using_self_in_function@invalid.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: "fn foo(self) -> void { }"
---
× error[LM3015]: self cannot be used in functions
   ╭───────────
 1 │ fn foo(self) -> void { }
   │        ^^^^ self cannot be used in functions; they must only be used in traits and classes
   ╰──
   help: since functions have no instance, remove the self parameter
